fixed reset button

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <![endif]-->
 
     <!-- Fav and touch icons -->
-    
+
   </head>
 
   <body>
@@ -55,11 +55,14 @@
                     </div>
                 </div>
             </div>
+            <div style="padding:10px; font-size:12px">
+                <a href="https://github.com/mrjoseph/flip-clock" target="_blank">Git Hub</a>
+            </div>
         </div>
     </div>
 
 
-    
+
 
 
     <!-- Le javascript
